<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="24dp"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insertRecipe"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputName"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"/>

        <EditText
            android:id="@+id/inputDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputDesc"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"/>

        <EditText
            android:id="@+id/inputPreparationTIme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPreparationTIme"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"
            android:inputType="number"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmBtn"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelAddBtn"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>