<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            android:paddingEnd="10dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp">

            <TextView
                android:id="@+id/txtSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:hint="@string/previousActivityLabel"
                android:gravity="start | center"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"/>

        </FrameLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:padding="24dp"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/lbName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipeName"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputName"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"/>

            <TextView
                android:id="@+id/lbDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipeDesc"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputName"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"/>

            <TextView
                android:id="@+id/lbPreparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipePreparation"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputPreparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputName"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_input"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updateBtn"
                android:padding="10dp"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteBtn"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>